--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=soma@123
 
+security.oauth2.client.scope=password
+
+security.jwt.signig-key=TWFyaW8gY29zdGEgVGVzdGUgc29tYSBQYXk=
 
 spring.jpa.hibernate.ddl-auto=create
+
+
